# Stp-Research-Summariser

./: .env.example  .gitignore  README.md  command.md  package-lock.json  package.json  pyproject.toml
examples/: sample_paper.txt
src/paper_distiller/: __init__.py  __main__.py  chunking.py  cli.py  config.py  document.py  exporters.py  ingest.py  models.py  pipeline.py  prompts.py  text_utils.py
tests/: test_pipeline.py
